ops/k8s/dev/manifests/ingress.yaml
# HTTP middleware entrypoints for dev environment.
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: consul-ui
  namespace: bass-dev
spec:
  entryPoints:
    - consul-ui
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-consul-ui
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: consul-ui-web
  namespace: bass-dev
spec:
  entryPoints:
    - web-public
  routes:
    - match: Host(`consul.dev.bass.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-consul-ui
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: consul-api
  namespace: bass-dev
spec:
  entryPoints:
    - consul-api
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-consul-server
          port: 8500
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-s3
  namespace: bass-dev
spec:
  entryPoints:
    - minio-s3
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-minio
          port: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: bass-dev
spec:
  entryPoints:
    - minio-console
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-minio-console
          port: 9001
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console-web
  namespace: bass-dev
spec:
  entryPoints:
    - web-public
  routes:
    - match: Host(`minio.dev.bass.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-minio-console
          port: 9001
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nats-monitor
  namespace: bass-dev
spec:
  entryPoints:
    - nats-monitor
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-nats-headless
          port: 8222
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nats-monitor-web
  namespace: bass-dev
spec:
  entryPoints:
    - web-public
  routes:
    - match: Host(`nats.dev.bass.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-nats-headless
          port: 8222
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dtm-http
  namespace: bass-dev
spec:
  entryPoints:
    - dtm-http
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-dtm
          port: 36789
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dtm-http-web
  namespace: bass-dev
spec:
  entryPoints:
    - web-public
  routes:
    - match: Host(`dtm.dev.bass.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: bass-dtm
          port: 36789
